package com.autonomous.api.grpc

import io.grpc.stub.StreamObserver
import net.devh.boot.grpc.server.service.GrpcService

@GrpcService
class SimulationServiceImpl : SimulationServiceGrpc.SimulationServiceImplBase() {

    override fun runSimulation(request: RunSimulationRequest, responseObserver: StreamObserver<RunSimulationResponse>) {
        // Implementation
        val response = RunSimulationResponse.newBuilder()
            .setSimulationId(request.simulationId)
            .setStatus("RUNNING")
            .setMessage("Simulation started")
            .setRequestedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun getSimulationStatus(request: GetSimulationStatusRequest, responseObserver: StreamObserver<GetSimulationStatusResponse>) {
        // Implementation
        val response = GetSimulationStatusResponse.newBuilder()
            .setSimulationId(request.simulationId)
            .setMissionId("MISSION-001")
            .setStatus("RUNNING")
            .setProgress("75%")
            .setMessage("Simulation in progress")
            .setRequestedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .setStartedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun cancelSimulation(request: CancelSimulationRequest, responseObserver: StreamObserver<CancelSimulationResponse>) {
        // Implementation
        val response = CancelSimulationResponse.newBuilder()
            .setSimulationId(request.simulationId)
            .setStatus("CANCELLED")
            .setMessage("Simulation cancelled")
            .setCancelledAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun getSimulationResults(request: GetSimulationResultsRequest, responseObserver: StreamObserver<GetSimulationResultsResponse>) {
        // Implementation
        val result = SimulationResult.newBuilder()
            .setAverageDurationSeconds(3600.0)
            .setMinimumDurationSeconds(3000.0)
            .setMaximumDurationSeconds(4200.0)
            .setStandardDeviationDurationSeconds(300.0)
            .setAverageEnergyConsumptionWh(5000.0)
            .setMinimumEnergyConsumptionWh(4500.0)
            .setMaximumEnergyConsumptionWh(5500.0)
            .setStandardDeviationEnergyConsumptionWh(250.0)
            .setSuccessfulIterations(950)
            .setFailedIterations(50)
            .setErrorAnalysis("Minor errors due to weather conditions")
            .build()

        val response = GetSimulationResultsResponse.newBuilder()
            .setSimulationId(request.simulationId)
            .setMissionId("MISSION-001")
            .setStatus("COMPLETED")
            .setResult(result)
            .setCompletedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }
}